Warbler App solutions 1 to 5

--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -104,7 +104,7 @@ nav form.navbar-form {
 }
 
 .onboarding > .navbar {
-  background-image: url("/static/images/nav-bg.png");
+  background-image: url('/static/images/nav-bg.png');
   background-size: 100% 100%;
 }
 
@@ -383,7 +383,7 @@ nav + .container {
   width: 100vw;
   left: 0;
   z-index: -1;
-  background-image: url("/static/images/signed-out-home.jpg");
+  background-image: url('/static/images/signed-out-home.jpg');
   background-size: cover;
   background-position: center center;
   color: #fff;
@@ -404,7 +404,7 @@ nav + .container {
 }
 
 .home-hero:before {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
@@ -521,4 +521,12 @@ nav + .container {
 
 .message-404 .form-inline input {
   flex: 1;
+}
+
+#page_404 {
+  margin: 0 auto;
+}
+
+#bio {
+  margin-top: 3em;
 }
