--- a/templates/messages/show.html
+++ b/templates/messages/show.html
@@ -29,6 +29,9 @@
           </div>
           <p class="single-message">{{ message.text }}</p>
           <span class="text-muted">{{ message.timestamp.strftime('%d %B %Y') }}</span>
+          <div>
+            <button type = "click">Like</button>
+          </div>
         </div>
       </li>
     </ul>
