--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<div id="warbler-hero" class="full-width" style="background-image: url('/static/images/warbler-hero.jpg');"></div>
+<div id="warbler-hero" class="full-width" style="background-image: url({{user.header_image_url}});"></div>
 <img src="{{ user.image_url }}" alt="Image for {{ user.username }}" id="profile-avatar">
 <div class="row full-width">
   <div class="container">
@@ -55,6 +55,8 @@
 <div class="row">
   <div class="col-sm-3">
     <h4 id="sidebar-username">@{{ user.username }}</h4>
+    <h4> Bio: {{ user.bio }}</h4>
+    <h4>Location: {{ user.location }}</h4>
   </div>
   {% block user_details %}
   {% endblock %}
