--- a/templates/users/followers.html
+++ b/templates/users/followers.html
@@ -7,13 +7,14 @@
       <div class="card user-card">
         <div class="card-inner">
           <div class="image-wrapper">
-            <img src="{{ url_for('static', filename='images/warbler-hero.jpg') }}" alt="" class="card-hero">
+            <img src="{{ follower.header_image_url }}" alt="" class="card-hero">
           </div>
           <div class="card-contents">
             <a href="{{ url_for('users_show', user_id=follower.id) }}" class="card-link">
               <img src="{{ follower.image_url }}" alt="Image for {{ follower.username }}" class="card-image">
-              <p>@{{ follower.username }}</p>
+              <p>@{{ follower.username }}</p> 
             </a>
+  
             {% if current_user.is_following(follower) %}
             <form method="POST" action="{{url_for('followers_destroy', follower_id=follower.id)}}?_method=DELETE">
               <input type="submit" value="Unfollow" class="btn btn-primary btn-sm">
@@ -23,10 +24,15 @@
               <input type="submit" value="Follow" class="btn btn-outline-primary btn-sm">
             </form>
             {% endif %}
+            
           </div>
+          <div id = "bio" ><p>Bio: {{ follower.bio }}</p></div>
         </div>
+        
       </div>
+      
     </div>
+    
     {% endfor %}
   </div>
 </div>
