--- a/templates/users/index.html
+++ b/templates/users/index.html
@@ -11,7 +11,7 @@
           <div class="card user-card">
             <div class="card-inner">
               <div class="image-wrapper">
-                <img src="{{ url_for('static', filename='images/warbler-hero.jpg') }}" alt="" class="card-hero">
+                <img src="{{ user.header_image_url }}" alt="" class="card-hero">
               </div>
               <div class="card-contents">
                 <a href="{{ url_for('users_show', user_id=user.id) }}" class="card-link">
@@ -30,6 +30,8 @@
                   {% endif %}
                 {% endif %}
               </div>
+              <div id = "bio" ><p>Bio: {{ user.bio }}</p></div>
+
             </div>
           </div>
         </div>
