--- a/templates/users/following.html
+++ b/templates/users/following.html
@@ -24,7 +24,7 @@
             </form>
             {% endif %}
           </div>
-          <div id = "bio" ><p>Bio: {{ followee.bio }}</p></div>
+          <p id="bioinfo">Bio: {{ followee.bio }}</p>
         </div>
       </div>
     </div>
