--- a/templates/users/index.html
+++ b/templates/users/index.html
@@ -30,7 +30,7 @@
                   {% endif %}
                 {% endif %}
               </div>
-              <div id = "bio" ><p>Bio: {{ user.bio }}</p></div>
+              <p id="bioinfo">Bio: {{ user.bio }}</p>
 
             </div>
           </div>
