--- a/templates/404.html
+++ b/templates/404.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <img src="/static/images/404.gif" alt="404 error" id = "page_404" >
+
+<div class="text-center page_404">
+  <img src="/static/images/404.gif" alt="404 error">
+</div>
 {% endblock %}
