--- a/templates/users/followers.html
+++ b/templates/users/followers.html
@@ -26,7 +26,7 @@
             {% endif %}
             
           </div>
-          <div id = "bio" ><p>Bio: {{ follower.bio }}</p></div>
+          <p id="bioinfo">Bio: {{ follower.bio }}</p>
         </div>
         
       </div>
