--- a/templates/users/show.html
+++ b/templates/users/show.html
@@ -6,12 +6,15 @@
     <li class="list-group-item">
       <a href="{{ url_for('messages_show', user_id=user.id, message_id=message.id ) }}" class="message-link"/>
       <a href="{{ url_for('users_show', user_id=user.id) }}">
-        <img src="{{ user.image_url }}" alt="" class="timeline-image">
+        <img src="{{ user.image_url }}" alt="image" class="timeline-image">
       </a>
       <div class="message-area">
         <a href="{{ url_for('users_show', user_id=user.id) }}">@{{ user.username }}</a>
         <span class="text-muted">{{ message.timestamp.strftime('%d %B %Y') }}</span>
         <p>{{ message.text }}</p>
+        
+        
+        
       </div>
     </li>
     {% endfor %}
