--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -540,3 +540,43 @@ nav + .container {
 .like:hover {
   cursor: pointer;
 }
+
+#location {
+  font-size: 0.8em;
+  font-style: italic;
+}
+
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400italic);
+blockquote {
+  font-size: 1.4em;
+  margin-left: 0;
+  font-family: Open Sans;
+  font-style: italic;
+  color: #555555;
+  padding: 0.5em 0 0.5em 45px;
+  border-left: 5px solid;
+  line-height: 1.6;
+  position: relative;
+  background: #ededed;
+}
+
+blockquote::before {
+  font-family: Arial;
+  content: '\201C';
+  font-size: 3em;
+  position: absolute;
+  left: 5px;
+  top: -20px;
+}
+
+blockquote::after {
+  content: '';
+}
+
+blockquote span {
+  display: block;
+  color: #333333;
+  font-style: normal;
+  font-weight: bold;
+  margin-top: 1em;
+}
