--- a/templates/users/edit.html
+++ b/templates/users/edit.html
@@ -1,33 +1,31 @@
-{% extends 'base.html' %}
-{% block content %}
-<div class="row justify-content-md-center">
-  <div class="col-md-4">
-    <h2 class="join-message">Edit Your Profile.</h2>
-    <form action="{{ url_for('users_show', user_id=user_id) }}?_method=PATCH" method="POST" id="user_form">
-      {{ form.hidden_tag() }}
+<script>
 
-      {% for field in form if field.widget.input_type != 'hidden' and field.name != 'password' %}
-        {% for error in field.errors %}
-          <span class="text-danger">{{ error }}</span>
-        {% endfor %}
-        {{ field(placeholder=field.label.text, class="form-control") }}
+
+</script>
+
+<form action="{{ url_for('users_show', user_id=current_user.id) }}?_method=PATCH" method="POST" id="user_form">
+                                   
+    {{ form.hidden_tag() }}
+
+    {% for field in form if field.widget.input_type != 'hidden' and field.name != 'password' %}
+      {% for error in field.errors %}
+        <span class="text-danger">{{ error }}</span>
       {% endfor %}
+      {{ field(placeholder=field.label.text, class="form-control") }}
+    {% endfor %}
 
-      <p>To confirm changes, enter your password:</p>
-      {% if form.password.errors %}
-        {% for error in form.password.errors %}
-          <span class="text-danger">
-            {{ error }}
-          </span>
-        {% endfor %}
-      {% endif %}
-      {{ form.password(placeholder="Enter your password to confirm", class="form-control") }}
-
-      <div class="edit-btn-area">
+    <p>To confirm changes, enter your password:</p>
+    {% if form.password.errors %}
+      {% for error in form.password.errors %}
+        <span class="text-danger">
+          {{ error }}
+        </span>
+      {% endfor %}
+    {% endif %}
+    {{ form.password(placeholder="Enter your password to confirm", class="form-control") }}
+  
+    <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         <button type="submit" class="btn btn-success">Edit this user!</button>
-        <a href="{{ url_for('users_show', user_id=user_id) }}" class="btn btn-outline-secondary">Cancel</a>
       </div>
-    </form>
-  </div>
-</div>
-{% endblock %}
+  </form>
